# UFSCar--BCC

1_ANO/CAP 1 - JANDER/: string.c  tipos_de_dados.c
1_ANO/CAP 1 - JANDER/Exercicios/: mediavelho.c  restooo.c  struct.c
1_ANO/CAP 1 - JANDER/Projeto-CAP/: truco.c
1_ANO/POO/: AULA-1.c
1ºANO/ARQ - 1/: riscv1.asm
1ºANO/Anotações/AED-1/: AULA - 19.08.txt
1ºANO/CAP 1 - JANDER/: CMakeLists.txt  struct.c
1ºANO/CAP 1 - JANDER/Exercicios/: estimarano.c  media.c  raiz.c  vetorfuncao.c  whilepraaula.c
1ºANO/CAP 1 - JANDER/Exercicios/output/: Dados
CAP 1 - JANDER/: expressoes_aritmeticas.c  expressoes_logicas.c  leituras.c  main
CAP 1 - JANDER/Exercicios/: Strings2.c  saida-exemplo.c  vetores.c
CAP 1 - JANDER/Exercicios/output/: conceitos.txt
CAP 1 - JANDER/Projeto-CAP/: README.md
JANDER/: celsius.c  contadorpar.c  main.c  matriz.c
JANDER/Exercicios/: Projeto copy 2.c  Projeto copy.c  Projeto.c  alturamax.c  areacirculo.c  char.c  conceito.c  conceitonoarquivo.c  distanciaorigem.c  divisores.c  fatorial.c  funcao.c  funcao2x.c  matriz.c  media3.c  resto.c  valorabsoluto.c
